--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Burgi</title>
     </head>
-    <h1>Welcome</h1>
+    <h1>Welcome du hs</h1>
     <body>
 
     </body>
